--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "cv_angel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://angelsaas.github.io/cv_angel/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
+    "postbuild": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build && npm run export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "framer-motion": "^11.18.0",
@@ -21,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
